@@ -3,8 +3,8 @@ sshterm.myproxy.defaults.hostname=myproxy.lrz.de
 sshterm.myproxy.defaults.port=7512
 sshterm.myproxy.voname=
 sshterm.proxy.save=true
-sshterm.myproxy.cacert.url=http://winnetou.sara.nl/prace/certs/globuscerts.tar.gz
-sshterm.voms.config.url=http://www.lrz.de/services/compute/grid_res/misc/voms/config.tar.gz
+sshterm.myproxy.cacert.url=https://winnetou.surfsara.nl/prace/certs/globuscerts.tar.gz
+sshterm.voms.config.url=https://www.lrz.de/services/compute/grid_res/misc/voms/config.tar.gz
 sshterm.voms.support=false
 sshterm.simple.connection.port=2222
 sshterm.krb5myproxy.enabled=false
